feat: nice caching speed now

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,66 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Popular movies (first page):\n",
-      "shape: (5, 17)\n",
-      "┌──────┬─────────────┬──────────────┬───────┬───┬──────────────┬───────┬──────────────┬────────────┐\n",
-      "│ page ┆ total_pages ┆ total_result ┆ adult ┆ … ┆ title        ┆ video ┆ vote_average ┆ vote_count │\n",
-      "│ ---  ┆ ---         ┆ s            ┆ ---   ┆   ┆ ---          ┆ ---   ┆ ---          ┆ ---        │\n",
-      "│ i64  ┆ i64         ┆ ---          ┆ bool  ┆   ┆ str          ┆ bool  ┆ f64          ┆ i64        │\n",
-      "│      ┆             ┆ i64          ┆       ┆   ┆              ┆       ┆              ┆            │\n",
-      "╞══════╪═════════════╪══════════════╪═══════╪═══╪══════════════╪═══════╪══════════════╪════════════╡\n",
-      "│ 1    ┆ 45281       ┆ 905605       ┆ false ┆ … ┆ Bad Boys:    ┆ false ┆ 7.511        ┆ 897        │\n",
-      "│      ┆             ┆              ┆       ┆   ┆ Ride or Die  ┆       ┆              ┆            │\n",
-      "│ 1    ┆ 45281       ┆ 905605       ┆ false ┆ … ┆ Inside Out 2 ┆ false ┆ 7.631        ┆ 2077       │\n",
-      "│ 1    ┆ 45281       ┆ 905605       ┆ false ┆ … ┆ Despicable   ┆ false ┆ 7.225        ┆ 406        │\n",
-      "│      ┆             ┆              ┆       ┆   ┆ Me 4         ┆       ┆              ┆            │\n",
-      "│ 1    ┆ 45281       ┆ 905605       ┆ false ┆ … ┆ Deadpool &   ┆ false ┆ 8.3          ┆ 290        │\n",
-      "│      ┆             ┆              ┆       ┆   ┆ Wolverine    ┆       ┆              ┆            │\n",
-      "│ 1    ┆ 45281       ┆ 905605       ┆ false ┆ … ┆ The Garfield ┆ false ┆ 7.243        ┆ 563        │\n",
-      "│      ┆             ┆              ┆       ┆   ┆ Movie        ┆       ┆              ┆            │\n",
-      "└──────┴─────────────┴──────────────┴───────┴───┴──────────────┴───────┴──────────────┴────────────┘\n",
-      "Total movies fetched: 20\n",
-      "\n",
-      "Detailed movie information:\n",
-      "shape: (5, 27)\n",
-      "┌───────┬────────────┬───────────┬────────────┬───┬────────────┬───────────┬───────────┬───────────┐\n",
-      "│ adult ┆ backdrop_p ┆ budget    ┆ homepage   ┆ … ┆ iso_3166_1 ┆ english_n ┆ iso_639_1 ┆ belongs_t │\n",
-      "│ ---   ┆ ath        ┆ ---       ┆ ---        ┆   ┆ ---        ┆ ame       ┆ ---       ┆ o_collect │\n",
-      "│ bool  ┆ ---        ┆ i64       ┆ str        ┆   ┆ str        ┆ ---       ┆ str       ┆ ion       │\n",
-      "│       ┆ str        ┆           ┆            ┆   ┆            ┆ str       ┆           ┆ ---       │\n",
-      "│       ┆            ┆           ┆            ┆   ┆            ┆           ┆           ┆ null      │\n",
-      "╞═══════╪════════════╪═══════════╪════════════╪═══╪════════════╪═══════════╪═══════════╪═══════════╡\n",
-      "│ false ┆ /k9hhSHg5G ┆ 100000000 ┆ https://ww ┆ … ┆ null       ┆ null      ┆ null      ┆ null      │\n",
-      "│       ┆ S4UgWQC6MH ┆           ┆ w.badboys. ┆   ┆            ┆           ┆           ┆           │\n",
-      "│       ┆ BOZrarji.j ┆           ┆ movie      ┆   ┆            ┆           ┆           ┆           │\n",
-      "│       ┆ …          ┆           ┆            ┆   ┆            ┆           ┆           ┆           │\n",
-      "│ false ┆ /tncbMvfV0 ┆ 100000000 ┆ https://ww ┆ … ┆ null       ┆ null      ┆ null      ┆ null      │\n",
-      "│       ┆ V07UZozXdB ┆           ┆ w.badboys. ┆   ┆            ┆           ┆           ┆           │\n",
-      "│       ┆ Eq4Wu9HH.j ┆           ┆ movie      ┆   ┆            ┆           ┆           ┆           │\n",
-      "│       ┆ …          ┆           ┆            ┆   ┆            ┆           ┆           ┆           │\n",
-      "│ false ┆ /tncbMvfV0 ┆ 100000000 ┆ https://ww ┆ … ┆ null       ┆ null      ┆ null      ┆ null      │\n",
-      "│       ┆ V07UZozXdB ┆           ┆ w.badboys. ┆   ┆            ┆           ┆           ┆           │\n",
-      "│       ┆ Eq4Wu9HH.j ┆           ┆ movie      ┆   ┆            ┆           ┆           ┆           │\n",
-      "│       ┆ …          ┆           ┆            ┆   ┆            ┆           ┆           ┆           │\n",
-      "│ false ┆ /tncbMvfV0 ┆ 100000000 ┆ https://ww ┆ … ┆ null       ┆ null      ┆ null      ┆ null      │\n",
-      "│       ┆ V07UZozXdB ┆           ┆ w.badboys. ┆   ┆            ┆           ┆           ┆           │\n",
-      "│       ┆ Eq4Wu9HH.j ┆           ┆ movie      ┆   ┆            ┆           ┆           ┆           │\n",
-      "│       ┆ …          ┆           ┆            ┆   ┆            ┆           ┆           ┆           │\n",
-      "│ false ┆ /tncbMvfV0 ┆ 100000000 ┆ https://ww ┆ … ┆ null       ┆ null      ┆ null      ┆ null      │\n",
-      "│       ┆ V07UZozXdB ┆           ┆ w.badboys. ┆   ┆            ┆           ┆           ┆           │\n",
-      "│       ┆ Eq4Wu9HH.j ┆           ┆ movie      ┆   ┆            ┆           ┆           ┆           │\n",
-      "│       ┆ …          ┆           ┆            ┆   ┆            ┆           ┆           ┆           │\n",
-      "└───────┴────────────┴───────────┴────────────┴───┴────────────┴───────────┴───────────┴───────────┘\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging\n",
     "from logging.handlers import RotatingFileHandler\n",
@@ -127,16 +70,15 @@
     "    print(\"\\nDetailed movie information:\")\n",
     "    print(movie_details.head())\n",
     "\n",
-    "    # # 4. Transform the data to create a summary\n",
-    "    # summary = await movie_credits.transform(\n",
-    "    #     \"\"\"\n",
-    "    #     Provide a summary of the top 10 movies by popularity, including their title, \n",
-    "    #     release date, vote average, and the names of the top 3 cast members.\n",
-    "    #     \"\"\"\n",
-    "    # )\n",
+    "    # 4. Transform the data to create a summary\n",
+    "    summary = await movie_details.transform(\n",
+    "        \"\"\"\n",
+    "        Get the top 5 highest rated movies\n",
+    "        \"\"\"\n",
+    "    )\n",
     "\n",
-    "    # print(\"\\nTop 10 movies summary:\")\n",
-    "    # print(summary)\n",
+    "    print(\"\\nTop 10 movies summary:\")\n",
+    "    print(summary)\n",
     "\n",
     "\n",
     "await main()"
