feat: improve caching mechanism and leave out neo4j for now

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,9 +2,204 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:root:     page  total_pages  total_results  adult  \\\n",
+      "0       1        45285         905682  False   \n",
+      "1       1        45285         905682  False   \n",
+      "2       1        45285         905682  False   \n",
+      "3       1        45285         905682  False   \n",
+      "4       1        45285         905682  False   \n",
+      "..    ...          ...            ...    ...   \n",
+      "204     1        45285         905682  False   \n",
+      "205     1        45285         905682  False   \n",
+      "206     1        45285         905682  False   \n",
+      "207     1        45285         905682  False   \n",
+      "208     1        45285         905682  False   \n",
+      "\n",
+      "                        backdrop_path         genre_ids      id  \\\n",
+      "0    /tncbMvfV0V07UZozXdBEq4Wu9HH.jpg  [28, 80, 53, 35]  573435   \n",
+      "1    /tncbMvfV0V07UZozXdBEq4Wu9HH.jpg  [28, 80, 53, 35]  573435   \n",
+      "2    /tncbMvfV0V07UZozXdBEq4Wu9HH.jpg  [28, 80, 53, 35]  573435   \n",
+      "3    /tncbMvfV0V07UZozXdBEq4Wu9HH.jpg  [28, 80, 53, 35]  573435   \n",
+      "4    /tncbMvfV0V07UZozXdBEq4Wu9HH.jpg  [28, 80, 53, 35]  573435   \n",
+      "..                                ...               ...     ...   \n",
+      "204  /xk2y81O2FljJwuyFP1HoJnCO8ed.jpg     [878, 28, 12]  823464   \n",
+      "205  /xk2y81O2FljJwuyFP1HoJnCO8ed.jpg     [878, 28, 12]  823464   \n",
+      "206  /xk2y81O2FljJwuyFP1HoJnCO8ed.jpg     [878, 28, 12]  823464   \n",
+      "207  /xk2y81O2FljJwuyFP1HoJnCO8ed.jpg     [878, 28, 12]  823464   \n",
+      "208  /xk2y81O2FljJwuyFP1HoJnCO8ed.jpg     [878, 28, 12]  823464   \n",
+      "\n",
+      "    original_language                   original_title  \\\n",
+      "0                  en            Bad Boys: Ride or Die   \n",
+      "1                  en            Bad Boys: Ride or Die   \n",
+      "2                  en            Bad Boys: Ride or Die   \n",
+      "3                  en            Bad Boys: Ride or Die   \n",
+      "4                  en            Bad Boys: Ride or Die   \n",
+      "..                ...                              ...   \n",
+      "204                en  Godzilla x Kong: The New Empire   \n",
+      "205                en  Godzilla x Kong: The New Empire   \n",
+      "206                en  Godzilla x Kong: The New Empire   \n",
+      "207                en  Godzilla x Kong: The New Empire   \n",
+      "208                en  Godzilla x Kong: The New Empire   \n",
+      "\n",
+      "                                              overview  ...  runtime  \\\n",
+      "0    After their late former Captain is framed, Low...  ...      115   \n",
+      "1    After their late former Captain is framed, Low...  ...      115   \n",
+      "2    After their late former Captain is framed, Low...  ...      115   \n",
+      "3    After their late former Captain is framed, Low...  ...      115   \n",
+      "4    After their late former Captain is framed, Low...  ...      115   \n",
+      "..                                                 ...  ...      ...   \n",
+      "204  Following their explosive showdown, Godzilla a...  ...      115   \n",
+      "205  Following their explosive showdown, Godzilla a...  ...      115   \n",
+      "206  Following their explosive showdown, Godzilla a...  ...      115   \n",
+      "207  Following their explosive showdown, Godzilla a...  ...      115   \n",
+      "208  Following their explosive showdown, Godzilla a...  ...      115   \n",
+      "\n",
+      "       status                                  tagline  \\\n",
+      "0    Released  Miami's finest are now its most wanted.   \n",
+      "1    Released  Miami's finest are now its most wanted.   \n",
+      "2    Released  Miami's finest are now its most wanted.   \n",
+      "3    Released  Miami's finest are now its most wanted.   \n",
+      "4    Released  Miami's finest are now its most wanted.   \n",
+      "..        ...                                      ...   \n",
+      "204  Released             Rise together or fall alone.   \n",
+      "205  Released             Rise together or fall alone.   \n",
+      "206  Released             Rise together or fall alone.   \n",
+      "207  Released             Rise together or fall alone.   \n",
+      "208  Released             Rise together or fall alone.   \n",
+      "\n",
+      "                         name  origin_country  \\\n",
+      "0         Bad Boys Collection            None   \n",
+      "1                      Action            None   \n",
+      "2                       Crime            None   \n",
+      "3                    Thriller            None   \n",
+      "4                      Comedy            None   \n",
+      "..                        ...             ...   \n",
+      "204                 Adventure            None   \n",
+      "205                      None              US   \n",
+      "206        Legendary Pictures              US   \n",
+      "207  United States of America            None   \n",
+      "208                   English            None   \n",
+      "\n",
+      "                            logo_path  iso_3166_1  english_name iso_639_1  \\\n",
+      "0                                None        None          None      None   \n",
+      "1                                None        None          None      None   \n",
+      "2                                None        None          None      None   \n",
+      "3                                None        None          None      None   \n",
+      "4                                None        None          None      None   \n",
+      "..                                ...         ...           ...       ...   \n",
+      "204                              None        None          None      None   \n",
+      "205                              None        None          None      None   \n",
+      "206  /8M99Dkt23MjQMTTWukq4m5XsEuo.png        None          None      None   \n",
+      "207                              None          US          None      None   \n",
+      "208                              None        None       English        en   \n",
+      "\n",
+      "    belongs_to_collection  \n",
+      "0                    None  \n",
+      "1                    None  \n",
+      "2                    None  \n",
+      "3                    None  \n",
+      "4                    None  \n",
+      "..                    ...  \n",
+      "204                  None  \n",
+      "205                  None  \n",
+      "206                  None  \n",
+      "207                  None  \n",
+      "208                  None  \n",
+      "\n",
+      "[209 rows x 31 columns]\n",
+      "DEBUG:root:import pandas as pd\n",
+      "\n",
+      "# Ensure 'release_date' column is in datetime format\n",
+      "df['release_date'] = pd.to_datetime(df['release_date'], errors='coerce')\n",
+      "\n",
+      "# Sort the DataFrame by 'vote_average' in descending order to get top-rated movies\n",
+      "df_sorted = df.sort_values(by='vote_average', ascending=False)\n",
+      "\n",
+      "# Drop duplicates based on 'id', keeping the first occurrence\n",
+      "df_unique = df_sorted.drop_duplicates(subset='id', keep='first')\n",
+      "\n",
+      "# Select the top 5 unique highest rated movies\n",
+      "top_5_df = df_unique.head(5)\n",
+      "\n",
+      "# Select relevant columns to show\n",
+      "result = top_5_df[['name', 'release_date', 'overview', 'imdb_id', 'homepage', 'runtime', 'status']]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Popular movies (first page):\n",
+      "shape: (5, 17)\n",
+      "┌──────┬─────────────┬──────────────┬───────┬───┬──────────────┬───────┬──────────────┬────────────┐\n",
+      "│ page ┆ total_pages ┆ total_result ┆ adult ┆ … ┆ title        ┆ video ┆ vote_average ┆ vote_count │\n",
+      "│ ---  ┆ ---         ┆ s            ┆ ---   ┆   ┆ ---          ┆ ---   ┆ ---          ┆ ---        │\n",
+      "│ i64  ┆ i64         ┆ ---          ┆ bool  ┆   ┆ str          ┆ bool  ┆ f64          ┆ i64        │\n",
+      "│      ┆             ┆ i64          ┆       ┆   ┆              ┆       ┆              ┆            │\n",
+      "╞══════╪═════════════╪══════════════╪═══════╪═══╪══════════════╪═══════╪══════════════╪════════════╡\n",
+      "│ 1    ┆ 45285       ┆ 905682       ┆ false ┆ … ┆ Bad Boys:    ┆ false ┆ 7.523        ┆ 914        │\n",
+      "│      ┆             ┆              ┆       ┆   ┆ Ride or Die  ┆       ┆              ┆            │\n",
+      "│ 1    ┆ 45285       ┆ 905682       ┆ false ┆ … ┆ Inside Out 2 ┆ false ┆ 7.6          ┆ 2083       │\n",
+      "│ 1    ┆ 45285       ┆ 905682       ┆ false ┆ … ┆ Despicable   ┆ false ┆ 7.239        ┆ 412        │\n",
+      "│      ┆             ┆              ┆       ┆   ┆ Me 4         ┆       ┆              ┆            │\n",
+      "│ 1    ┆ 45285       ┆ 905682       ┆ false ┆ … ┆ Deadpool &   ┆ false ┆ 8.2          ┆ 329        │\n",
+      "│      ┆             ┆              ┆       ┆   ┆ Wolverine    ┆       ┆              ┆            │\n",
+      "│ 1    ┆ 45285       ┆ 905682       ┆ false ┆ … ┆ Justice      ┆ false ┆ 7.635        ┆ 89         │\n",
+      "│      ┆             ┆              ┆       ┆   ┆ League:      ┆       ┆              ┆            │\n",
+      "│      ┆             ┆              ┆       ┆   ┆ Crisis on    ┆       ┆              ┆            │\n",
+      "│      ┆             ┆              ┆       ┆   ┆ Infi…        ┆       ┆              ┆            │\n",
+      "└──────┴─────────────┴──────────────┴───────┴───┴──────────────┴───────┴──────────────┴────────────┘\n",
+      "Total movies fetched: 20\n",
+      "\n",
+      "Detailed movie information:\n",
+      "shape: (5, 31)\n",
+      "┌──────┬─────────────┬─────────────┬───────┬───┬────────────┬─────────────┬───────────┬────────────┐\n",
+      "│ page ┆ total_pages ┆ total_resul ┆ adult ┆ … ┆ iso_3166_1 ┆ english_nam ┆ iso_639_1 ┆ belongs_to │\n",
+      "│ ---  ┆ ---         ┆ ts          ┆ ---   ┆   ┆ ---        ┆ e           ┆ ---       ┆ _collectio │\n",
+      "│ i64  ┆ i64         ┆ ---         ┆ bool  ┆   ┆ str        ┆ ---         ┆ str       ┆ n          │\n",
+      "│      ┆             ┆ i64         ┆       ┆   ┆            ┆ str         ┆           ┆ ---        │\n",
+      "│      ┆             ┆             ┆       ┆   ┆            ┆             ┆           ┆ null       │\n",
+      "╞══════╪═════════════╪═════════════╪═══════╪═══╪════════════╪═════════════╪═══════════╪════════════╡\n",
+      "│ 1    ┆ 45285       ┆ 905682      ┆ false ┆ … ┆ null       ┆ null        ┆ null      ┆ null       │\n",
+      "│ 1    ┆ 45285       ┆ 905682      ┆ false ┆ … ┆ null       ┆ null        ┆ null      ┆ null       │\n",
+      "│ 1    ┆ 45285       ┆ 905682      ┆ false ┆ … ┆ null       ┆ null        ┆ null      ┆ null       │\n",
+      "│ 1    ┆ 45285       ┆ 905682      ┆ false ┆ … ┆ null       ┆ null        ┆ null      ┆ null       │\n",
+      "│ 1    ┆ 45285       ┆ 905682      ┆ false ┆ … ┆ null       ┆ null        ┆ null      ┆ null       │\n",
+      "└──────┴─────────────┴─────────────┴───────┴───┴────────────┴─────────────┴───────────┴────────────┘\n",
+      "\n",
+      "Top 10 movies summary:\n",
+      "shape: (5, 7)\n",
+      "┌────────────────┬───────────────┬───────────────┬────────────┬───────────────┬─────────┬──────────┐\n",
+      "│ name           ┆ release_date  ┆ overview      ┆ imdb_id    ┆ homepage      ┆ runtime ┆ status   │\n",
+      "│ ---            ┆ ---           ┆ ---           ┆ ---        ┆ ---           ┆ ---     ┆ ---      │\n",
+      "│ str            ┆ datetime[ns]  ┆ str           ┆ str        ┆ str           ┆ i64     ┆ str      │\n",
+      "╞════════════════╪═══════════════╪═══════════════╪════════════╪═══════════════╪═════════╪══════════╡\n",
+      "│ Science        ┆ 2024-07-24    ┆ A listless    ┆ tt6263850  ┆ https://www.m ┆ 128     ┆ Released │\n",
+      "│ Fiction        ┆ 00:00:00      ┆ Wade Wilson   ┆            ┆ arvel.com/mov ┆         ┆          │\n",
+      "│                ┆               ┆ toils a…      ┆            ┆ ies/…         ┆         ┆          │\n",
+      "│ United States  ┆ 2024-05-22    ┆ As the world  ┆ tt12037194 ┆ https://www.f ┆ 149     ┆ Released │\n",
+      "│ of America     ┆ 00:00:00      ┆ fell, young   ┆            ┆ uriosaamadmax ┆         ┆          │\n",
+      "│                ┆               ┆ Furio…        ┆            ┆ saga…         ┆         ┆          │\n",
+      "│ DC             ┆ 2024-07-16    ┆ Now fully     ┆ tt30150917 ┆ https://www.w ┆ 99      ┆ Released │\n",
+      "│ Entertainment  ┆ 00:00:00      ┆ revealed as   ┆            ┆ arnerbros.com ┆         ┆          │\n",
+      "│                ┆               ┆ the ulti…     ┆            ┆ /mov…         ┆         ┆          │\n",
+      "│ English        ┆ 2024-06-11    ┆ Teenager      ┆ tt22022452 ┆ https://movie ┆ 97      ┆ Released │\n",
+      "│                ┆ 00:00:00      ┆ Riley's mind  ┆            ┆ s.disney.com/ ┆         ┆          │\n",
+      "│                ┆               ┆ headquar…     ┆            ┆ insi…         ┆         ┆          │\n",
+      "│ English        ┆ 2024-06-05    ┆ After their   ┆ tt4919268  ┆ https://www.b ┆ 115     ┆ Released │\n",
+      "│                ┆ 00:00:00      ┆ late former   ┆            ┆ adboys.movie  ┆         ┆          │\n",
+      "│                ┆               ┆ Captai…       ┆            ┆               ┆         ┆          │\n",
+      "└────────────────┴───────────────┴───────────────┴────────────┴───────────────┴─────────┴──────────┘\n"
+     ]
+    }
+   ],
    "source": [
     "import logging\n",
     "from logging.handlers import RotatingFileHandler\n",
@@ -63,8 +258,6 @@
     "    # 2. Chain requests to get detailed information for each movie\n",
     "    movie_details = await popular_movies.chain(\n",
     "        f\"{BASE_URL}/movie/{{id}}?api_key={TMDB_API_KEY}\",\n",
-    "        source_key=\"id\",\n",
-    "        target_key=\"movie_id\"\n",
     "    )\n",
     "\n",
     "    print(\"\\nDetailed movie information:\")\n",
@@ -73,7 +266,7 @@
     "    # 4. Transform the data to create a summary\n",
     "    summary = await movie_details.transform(\n",
     "        \"\"\"\n",
-    "        Get the top 5 highest rated movies\n",
+    "        Get the top 5 highest rated movies unique by id show columns of name and release date and relevant details for booking\n",
     "        \"\"\"\n",
     "    )\n",
     "\n",
